--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<h1>Tree Component example</h1>
+<h1>Tree Component Example</h1>
 <app-tree-view [data]="dataSource" [includeSubUnits]="includeSubUnits"></app-tree-view>
