--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
 <h1>Tree Component Example</h1>
-<app-tree-view [data]="dataSource" [includeSubUnits]="includeSubUnits"></app-tree-view>
+<app-tree-view [data]="dataSource" [includeSubUnits]="includeSubUnits" [showNavigation]="true" (navigationCB)="handleNavigation()"></app-tree-view>
