feat: flat tree

--- a/src/app/app-tree/tree-view/tree-view.component.html
+++ b/src/app/app-tree/tree-view/tree-view.component.html
@@ -1,3 +1,37 @@
+<!--<section class="tree-root">-->
+<!--  <div class="header">-->
+<!--    <h2>{{title}}</h2>-->
+<!--    <ng-container *ngIf="showNavigation">-->
+<!--      <i (click)="handleNavigation()" class="bi bi-arrow-right-circle"></i>-->
+<!--    </ng-container>-->
+<!--  </div>-->
+<!--  <cdk-tree [dataSource]="dataSource" [treeControl]="treeControl">-->
+<!--    &lt;!&ndash; This is the tree node template for leaf nodes &ndash;&gt;-->
+<!--    <cdk-nested-tree-node *cdkTreeNodeDef="let node" class="example-tree-node">-->
+<!--      &lt;!&ndash; use a disabled button to provide padding for tree leaf &ndash;&gt;-->
+<!--      <span class="node-option" [class.active]="isLeafActive(node)" (click)="handleNodeClicked(node)">-->
+<!--      <i class="bi bi-archive"></i>-->
+<!--      <span>{{node.name}}</span>-->
+<!--    </span>-->
+<!--    </cdk-nested-tree-node>-->
+<!--    &lt;!&ndash; This is the tree node template for expandable nodes &ndash;&gt;-->
+<!--    <cdk-nested-tree-node *cdkTreeNodeDef="let node; when: hasChild" class="example-tree-node nested-node"-->
+<!--                          [class.selected-group]="isGroupActive(node)">-->
+<!--      <button [attr.aria-label]="'Toggle ' + node.name" cdkTreeNodeToggle>-->
+<!--        <i [ngClass]="treeControl.isExpanded(node) ? 'bi bi-chevron-expand' : 'bi bi-arrows-collapse'"></i>-->
+<!--      </button>-->
+<!--      <span class="node-option" [class.active]="isParentActive(node)" (click)="handleNodeClicked(node)">-->
+<!--      <i [ngClass]=" isRootNode(node) ? 'bi bi-buildings': 'bi bi-archive'"></i>-->
+<!--      <span>{{node.name}}</span>-->
+<!--    </span>-->
+<!--      <div [class.expanded]="treeControl.isExpanded(node)" class="children-container">-->
+<!--        <div class="expansion-content">-->
+<!--          <ng-container cdkTreeNodeOutlet></ng-container>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </cdk-nested-tree-node>-->
+<!--  </cdk-tree>-->
+<!--</section>-->
 <section class="tree-root">
   <div class="header">
     <h2>{{title}}</h2>
@@ -7,29 +41,27 @@
   </div>
   <cdk-tree [dataSource]="dataSource" [treeControl]="treeControl">
     <!-- This is the tree node template for leaf nodes -->
-    <cdk-nested-tree-node *cdkTreeNodeDef="let node" class="example-tree-node">
+    <cdk-tree-node class="tree-node" *cdkTreeNodeDef="let node"
+                   cdkTreeNodePadding>
       <!-- use a disabled button to provide padding for tree leaf -->
       <span class="node-option" [class.active]="isLeafActive(node)" (click)="handleNodeClicked(node)">
-      <i class="bi bi-archive"></i>
-      <span>{{node.name}}</span>
-    </span>
-    </cdk-nested-tree-node>
+            <i [ngClass]=" isRootNode(node) ? 'bi bi-buildings': 'bi bi-archive'"></i>
+            <span>{{node.name}}</span>
+      </span>
+    </cdk-tree-node>
     <!-- This is the tree node template for expandable nodes -->
-    <cdk-nested-tree-node *cdkTreeNodeDef="let node; when: hasChild" class="example-tree-node nested-node"
-                          [class.selected-group]="isGroupActive(node)">
-      <button [attr.aria-label]="'Toggle ' + node.name" cdkTreeNodeToggle>
+    <cdk-tree-node class="tree-node" [class.selected-group]="isGroupActive(node)"
+                   *cdkTreeNodeDef="let node;when: hasChild"
+                   cdkTreeNodePadding>
+      <button cdkTreeNodeToggle
+              [attr.aria-label]="'Toggle ' + node.name">
         <i [ngClass]="treeControl.isExpanded(node) ? 'bi bi-chevron-expand' : 'bi bi-arrows-collapse'"></i>
       </button>
       <span class="node-option" [class.active]="isParentActive(node)" (click)="handleNodeClicked(node)">
-      <i [ngClass]=" isRootNode(node) ? 'bi bi-buildings': 'bi bi-archive'"></i>
-      <span>{{node.name}}</span>
-    </span>
-      <div [class.expanded]="treeControl.isExpanded(node)" class="children-container">
-        <div class="expansion-content">
-          <ng-container cdkTreeNodeOutlet></ng-container>
-        </div>
-      </div>
-    </cdk-nested-tree-node>
+            <i [ngClass]=" isRootNode(node) ? 'bi bi-buildings': 'bi bi-archive'"></i>
+            <span>{{node.name}}</span>
+          </span>
+    </cdk-tree-node>
   </cdk-tree>
 </section>
 
